[package]
name = "framed"
version = "0.1.0"
authors = ["zenix <zenixls2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["stream", "sync", "time", "rt-core", "rt-threaded", "net", "io-driver"] }
log = "0.4"
tokio-util = { version = "0.3", features = ["full"] }
bytes = "0.5"
futures = "0.3.5"

[dev-dependencies]
net2 = "0.2"
